--- a/templates/netinfo/page_sites.html
+++ b/templates/netinfo/page_sites.html
@@ -6,7 +6,7 @@
         <!-- <meta charset="utf-8"> -->
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-        {% block title %}INSPINIA{% endblock %}
+        {% block title %}CB | {{ title }}{% endblock %}
         <!-- <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"> -->
         <!-- <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet"> -->
         <!-- Toastr style -->
@@ -35,11 +35,11 @@
                 {% include 'comp_row_mid.html' %}
                 {% endblock %}
                 <!-- end row-mid -->
-                <!-- row-bottom -->
-                {% block row-bottom %}
-                {% include 'comp_row_bottom.html' %}
+                <!-- row-content -->
+                {% block row-content %}
+                {% include 'comp_row_content.html' %}
                 {% endblock %}
-                <!-- end row-bottom -->
+                <!-- end row-content -->
                 <!-- row-footer -->
                 {% block row-footer %}
                 {% include 'comp_row_footer.html' %}
@@ -48,7 +48,6 @@
             <!-- </div> -->
             <!-- sidebar-right -->
             {% block sidebar-right %}
-            {% include 'comp_sidebar_right.html' %}
             {% endblock %}
             <!-- end sidebar-right -->
         <!-- </div> -->
