--- a/templates/basic/comp_panel_left.html
+++ b/templates/basic/comp_panel_left.html
@@ -25,7 +25,7 @@
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Sites</span><span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level collapse">
-                                <li><a href="graph_flot.html">All Sites</a></li>
+                                <li><a href="{% url 'sites' %}">All Sites</a></li>
                                 <li><a href="graph_morris.html">Add Site</a></li>
                             </ul>
                         </li>
