--- a/templates/home/page_home.html
+++ b/templates/home/page_home.html
@@ -1,4 +1,4 @@
-{% extends "page_skeleton.html" %}
+{% extends "basic/page_skeleton.html" %}
 {% load static %}
 <!DOCTYPE html>
 <!-- <html> -->
@@ -21,28 +21,28 @@
         <!-- <div id="wrapper"> -->
             <!-- panel-left -->
             {% block panel-left %}
-            {% include 'comp_panel_left.html' %}
+            {% include 'basic/comp_panel_left.html' %}
             {% endblock %}
             <!-- end panel-left -->
             <!-- <div id="page-wrapper" class="gray-bg dashbard-1"> -->
                 <!-- row-top -->
                 {% block row-top %}
-                {% include 'comp_row_top.html' %}
+                {% include 'basic/comp_row_top.html' %}
                 {% endblock %}
                 <!-- end row-top -->
                 <!-- row-mid -->
                 {% block row-mid %}
-                {% include 'comp_row_mid.html' %}
+                {% include 'basic/comp_row_mid.html' %}
                 {% endblock %}
                 <!-- end row-mid -->
                 <!-- row-content -->
                 {% block row-content %}
-                {% include 'comp_row_content.html' %}
+                {% include 'basic/comp_row_content.html' %}
                 {% endblock %}
                 <!-- end row-content -->
                 <!-- row-footer -->
                 {% block row-footer %}
-                {% include 'comp_row_footer.html' %}
+                {% include 'basic/comp_row_footer.html' %}
                 {% endblock %}
                 <!-- end row-footer -->
             <!-- </div> -->
@@ -53,7 +53,7 @@
         <!-- </div> -->
         <!-- script-js -->
         {% block script-js %}
-        {% include 'script_js.html' %}
+        {% include 'scripts/script_js.html' %}
         {% endblock %}
         <!-- end script-js -->
     <!-- </body> -->
