--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -59,6 +59,6 @@
                 <div class="col-md-6 text-right"><small>© 2018-2019</small></div>
             </div>
         </div>
-        {% include 'script_js.html' %}
+        {% include 'scripts/script_js.html' %}
     </body>
 </html>
