--- a/templates/basic/comp_panel_left.html
+++ b/templates/basic/comp_panel_left.html
@@ -6,8 +6,8 @@
                             <div class="dropdown profile-element">
                                 <img alt="image" class="rounded-circle" src="{% static 'img/profile_small.jpg' %}"/>
                                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                                <span class="block m-t-xs font-bold">{{ user.username }}</span>
-                                <span class="text-muted text-xs block">Art Director <b class="caret"></b></span>
+                                    <span class="block m-t-xs font-bold">{{ user.first_name }} {{ user.last_name }}</span>
+                                    <span class="text-muted text-xs block">Art Director <b class="caret"></b></span>
                                 </a>
                                 <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                     <li><a class="dropdown-item" href="profile.html">Profile</a></li>
@@ -20,7 +20,7 @@
                             <div class="logo-element">CB</div>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboards</span><span class="fa arrow"></span></a>
+                            <a href="{% url 'home' %}"><i class="fa fa-th-large"></i><span class="nav-label">Dashboards</span><span class="fa arrow"></span></a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Sites</span><span class="fa arrow"></span></a>
