--- a/templates/basic/comp_row_mid.html
+++ b/templates/basic/comp_row_mid.html
@@ -1,7 +1,7 @@
                 {% load static %}
                 <div class="row wrapper border-bottom white-bg page-heading">
                     <div class="col-lg-10">
-                        <h2>Typography</h2>
+                        <h2>{{ title }}</h2>
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item">
                                 <a href="index.html">Home</a>
