--- a/templates/.inspinia/page_home_ori.html
+++ b/templates/.inspinia/page_home_ori.html
@@ -1,4 +1,4 @@
-{% extends "page_skeleton.html" %}
+{% extends ".inspinia/page_skeleton.html" %}
 {% load static %}
 <!DOCTYPE html>
 <!-- <html> -->
@@ -6,55 +6,54 @@
         <!-- <meta charset="utf-8"> -->
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-        {% block title %}INSPINIA{% endblock %}
-        <!-- <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"> -->
-        <!-- <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet"> -->
-        <!-- Toastr style -->
-        <!-- <link href="{% static 'css/plugins/toastr/toastr.min.css' %}" rel="stylesheet"> -->
-        <!-- Gritter -->
-        <!-- <link href="{% static 'js/plugins/gritter/jquery.gritter.css' %}" rel="stylesheet"> -->
-        <!-- Basic -->
-        <!-- <link href="{% static 'css/animate.css' %}" rel="stylesheet"> -->
-        <!-- <link href="{% static 'css/style.css' %}" rel="stylesheet"> -->
+        {% block title %}{{ title }}{% endblock %}
+        {% block css %}
+        {% include '.inspinia/comp_css_ori.html' %}
+        {% endblock %}
     <!-- </head> -->
     <!-- <body> -->
         <!-- <div id="wrapper"> -->
             <!-- panel-left -->
             {% block panel-left %}
-            {% include 'comp_panel_left.html' %}
+            {% include '.inspinia/comp_panel_left_ori.html' %}
             {% endblock %}
             <!-- end panel-left -->
             <!-- <div id="page-wrapper" class="gray-bg dashbard-1"> -->
                 <!-- row-top -->
                 {% block row-top %}
-                {% include 'comp_row_top.html' %}
+                {% include '.inspinia/comp_row_top_ori.html' %}
                 {% endblock %}
                 <!-- end row-top -->
                 <!-- row-mid -->
                 {% block row-mid %}
-                {% include 'comp_row_mid.html' %}
+                {% include '.inspinia/comp_row_mid_ori.html' %}
                 {% endblock %}
                 <!-- end row-mid -->
-                <!-- row-bottom -->
-                {% block row-bottom %}
-                {% include 'comp_row_bottom.html' %}
+                <!-- row-content -->
+                {% block row-content %}
+                {% include '.inspinia/comp_row_content_ori.html' %}
                 {% endblock %}
-                <!-- end row-bottom -->
+                <!-- end row-content -->
                 <!-- row-footer -->
                 {% block row-footer %}
-                {% include 'comp_row_footer.html' %}
+                {% include '.inspinia/comp_row_footer_ori.html' %}
                 {% endblock %}
                 <!-- end row-footer -->
             <!-- </div> -->
             <!-- sidebar-right -->
+            <!-- optional-part -->
+            {% block opt-part %}
+            {% include '.inspinia/comp_chat_ori.html' %}
+            {% endblock %}
+            <!-- end optional-part -->
             {% block sidebar-right %}
-            {% include 'comp_sidebar_right.html' %}
+            {% include '.inspinia/comp_sidebar_right_ori.html' %}
             {% endblock %}
             <!-- end sidebar-right -->
         <!-- </div> -->
         <!-- script-js -->
         {% block script-js %}
-        {% include 'script_js.html' %}
+        {% include 'scripts/script_js_ori.html' %}
         {% endblock %}
         <!-- end script-js -->
     <!-- </body> -->
