--- a/templates/home/page_home.html
+++ b/templates/home/page_home.html
@@ -7,15 +7,9 @@
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
         {% block title %}CB | {{ title }}{% endblock %}
-        <!-- <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"> -->
-        <!-- <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet"> -->
-        <!-- Toastr style -->
-        <!-- <link href="{% static 'css/plugins/toastr/toastr.min.css' %}" rel="stylesheet"> -->
-        <!-- Gritter -->
-        <!-- <link href="{% static 'js/plugins/gritter/jquery.gritter.css' %}" rel="stylesheet"> -->
-        <!-- Basic -->
-        <!-- <link href="{% static 'css/animate.css' %}" rel="stylesheet"> -->
-        <!-- <link href="{% static 'css/style.css' %}" rel="stylesheet"> -->
+        {% block css %}
+        {% include 'basic/comp_css.html' %}
+        {% endblock %}
     <!-- </head> -->
     <!-- <body> -->
         <!-- <div id="wrapper"> -->
