--- a/templates/scripts/script_js_sites.html
+++ b/templates/scripts/script_js_sites.html
@@ -14,7 +14,7 @@
         <!-- Page-Level Scripts -->
         <script>
             $(document).ready(function () {
-                $('.dataTables-example').DataTable({
+                $('.dataTables-sites').DataTable({
                     pageLength: 10,
                     responsive: true,
                     dom: '<"html5buttons"B>lTfgitp',
