--- a/templates/netinfo/page_sites_detail.html
+++ b/templates/netinfo/page_sites_detail.html
@@ -36,50 +36,61 @@
                         <div class="col-lg-6">
                             <div class="tabs-container">
                                 <ul class="nav nav-tabs" role="tablist">
-                                    <li><a class="nav-link active" data-toggle="tab" href="#tab-1"> This is tab</a></li>
-                                    <li><a class="nav-link" data-toggle="tab" href="#tab-2">This is second tab</a></li>
+                                    <li><a class="nav-link active" data-toggle="tab" href="#tab-1">Basic Info</a></li>
+                                    <li><a class="nav-link" data-toggle="tab" href="#tab-2">Contacts</a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div role="tabpanel" id="tab-1" class="tab-pane active">
                                         <div class="panel-body">
                                             <div class="ibox ">
                                                 <div class="ibox-title">
-                                                    <h5>Hover Table  </h5>
+                                                    <h5>{{ sites_data.type }} {{ sites_data.name }}</h5>
                                                     <div class="ibox-tools">
-                                                        <a class="collapse-link">
-                                                        <i class="fa fa-chevron-up"></i>
-                                                        </a>
-                                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                                        <i class="fa fa-wrench"></i>
-                                                        </a>
+                                                        <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-wrench"></i></a>
                                                         <ul class="dropdown-menu dropdown-user">
-                                                            <li><a href="#" class="dropdown-item">Config option 1</a>
-                                                            </li>
-                                                            <li><a href="#" class="dropdown-item">Config option 2</a>
-                                                            </li>
+                                                            <li><a href="#" class="dropdown-item">Edit</a></li>
+                                                            <li><a href="#" class="dropdown-item">Delete</a></li>
                                                         </ul>
-                                                        <a class="close-link">
-                                                        <i class="fa fa-times"></i>
-                                                        </a>
                                                     </div>
                                                 </div>
                                                 <div class="ibox-content">
                                                     <table class="table table-hover">
                                                         <tr>
-                                                            <th>#</th>
-                                                            <td>1</td>
+                                                            <th>Name</th>
+                                                            <td>{{ sites_data.name }}</td>
                                                         </tr>
                                                         <tr>
-                                                            <th>Data</th>
-                                                            <td><span class="pie">0.52,1.041</span></td>
+                                                            <th>Type</th>
+                                                            <td>{{ sites_data.type }}</td>
                                                         </tr>
                                                         <tr>
-                                                            <th>User</th>
-                                                            <td>Samantha</td>
+                                                            <th>Location</th>
+                                                            <td>{{ sites_data.location }}</td>
                                                         </tr>
                                                         <tr>
-                                                            <th>Value</th>
-                                                            <td class="text-navy"> <i class="fa fa-level-up"></i> 40% </td>
+                                                            <th>City</th>
+                                                            <td>{{ sites_data.city }}</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Description</th>
+                                                            <td>{{ sites_data.description }}</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>IP Address</th>
+                                                            <td>{{ sites_data.ip_address }}</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Site Code</th>
+                                                            <td>{{ sites_data.add_field1 }}</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Area Code</th>
+                                                            <td>{{ sites_data.add_field2 }}</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>Tagline</th>
+                                                            <td>{{ sites_data.tagline }}</td>
                                                         </tr>
                                                     </table>
                                                 </div>
