--- a/templates/netinfo/page_sites_detail.html
+++ b/templates/netinfo/page_sites_detail.html
@@ -32,7 +32,7 @@
                 <!-- row-content -->
                 {% block row-content %}
                 <div class="wrapper wrapper-content animated fadeInRight">
-                    <div class="row">
+                    <div class="row justify-content-md-center">
                         <div class="col-lg-6">
                             <div class="tabs-container">
                                 <ul class="nav nav-tabs" role="tablist">
@@ -49,8 +49,8 @@
                                                         <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                                                         <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-wrench"></i></a>
                                                         <ul class="dropdown-menu dropdown-user">
-                                                            <li><a href="#" class="dropdown-item">Edit</a></li>
-                                                            <li><a href="#" class="dropdown-item">Delete</a></li>
+                                                            <li><a href="edit" class="dropdown-item">Edit</a></li>
+                                                            <li><a href="delete" class="dropdown-item">Delete</a></li>
                                                         </ul>
                                                     </div>
                                                 </div>
