20190814#2-table menu width

--- a/templates/netinfo/page_sites.html
+++ b/templates/netinfo/page_sites.html
@@ -53,7 +53,7 @@
                                                     <th>Address</th>
                                                     <th>Site Code</th>
                                                     <th>Area Code</th>
-                                                    <th>Option</th>
+                                                    <th style="min-width: 60px">Option</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
