--- a/templates/netinfo/page_sites_detail.html
+++ b/templates/netinfo/page_sites_detail.html
@@ -44,7 +44,7 @@
                                         <div class="panel-body">
                                             <div class="ibox ">
                                                 <div class="ibox-title">
-                                                    <h5>{{ sites_data.type }} {{ sites_data.name }}</h5>
+                                                    <h5>{{ site_data.type }} {{ site_data.name }}</h5>
                                                     <div class="ibox-tools">
                                                         <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                                                         <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-wrench"></i></a>
@@ -58,39 +58,39 @@
                                                     <table class="table table-hover">
                                                         <tr>
                                                             <th>Name</th>
-                                                            <td>{{ sites_data.name }}</td>
+                                                            <td>{{ site_data.name }}</td>
                                                         </tr>
                                                         <tr>
                                                             <th>Type</th>
-                                                            <td>{{ sites_data.type }}</td>
+                                                            <td>{{ site_data.type }}</td>
                                                         </tr>
                                                         <tr>
                                                             <th>Location</th>
-                                                            <td>{{ sites_data.location }}</td>
+                                                            <td>{{ site_data.location }}</td>
                                                         </tr>
                                                         <tr>
                                                             <th>City</th>
-                                                            <td>{{ sites_data.city }}</td>
+                                                            <td>{{ site_data.city }}</td>
                                                         </tr>
                                                         <tr>
                                                             <th>Description</th>
-                                                            <td>{{ sites_data.description }}</td>
+                                                            <td>{{ site_data.description }}</td>
                                                         </tr>
                                                         <tr>
                                                             <th>IP Address</th>
-                                                            <td>{{ sites_data.ip_address }}</td>
+                                                            <td>{{ site_data.ip_address }}</td>
                                                         </tr>
                                                         <tr>
                                                             <th>Site Code</th>
-                                                            <td>{{ sites_data.add_field1 }}</td>
+                                                            <td>{{ site_data.add_field1 }}</td>
                                                         </tr>
                                                         <tr>
                                                             <th>Area Code</th>
-                                                            <td>{{ sites_data.add_field2 }}</td>
+                                                            <td>{{ site_data.add_field2 }}</td>
                                                         </tr>
                                                         <tr>
                                                             <th>Tagline</th>
-                                                            <td>{{ sites_data.tagline }}</td>
+                                                            <td>{{ site_data.tagline }}</td>
                                                         </tr>
                                                     </table>
                                                 </div>
@@ -99,13 +99,33 @@
                                     </div>
                                     <div role="tabpanel" id="tab-2" class="tab-pane">
                                         <div class="panel-body">
-                                            <strong>Donec quam felis</strong>
-                                            <p>Thousand unknown plants are noticed by me: when I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable forms of the insects
-                                                and flies, then I feel the presence of the Almighty, who formed us in his own image, and the breath
-                                            </p>
-                                            <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite
-                                                sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet.
-                                            </p>
+                                            <div class="ibox ">
+                                                <div class="ibox-title">
+                                                    <h5>{{ site_data.type }} {{ site_data.name }}</h5>
+                                                    <div class="ibox-tools">
+                                                        <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-wrench"></i></a>
+                                                        <ul class="dropdown-menu dropdown-user">
+                                                            <li><a href="edit" class="dropdown-item">Edit</a></li>
+                                                            <li><a href="delete" class="dropdown-item">Delete</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="ibox-content">
+                                                    {% if contacts_data %}
+                                                    <table class="table table-hover">
+                                                        {% for contact in contact_data %}
+                                                        <tr>
+                                                            <th style="width: 30%">{{ contact.type|title }}</th>
+                                                            <td>{{ contact.contact_number }}</td>
+                                                        </tr>
+                                                        {% endfor %}
+                                                    </table>
+                                                    {% else %}
+                                                    <div class="alert alert-info" role="alert">No contact information.</div>
+                                                    {% endif %}
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
