--- a/templates/basic/comp_panel_left.html
+++ b/templates/basic/comp_panel_left.html
@@ -27,7 +27,7 @@
                             <a class="btn disabled text-left" href="#"><span class="nav-label">Network Info</span></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Sites</span><span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-building"></i> <span class="nav-label">Sites</span><span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level collapse">
                                 <li><a href="{% url 'sites' %}">All Sites</a></li>
                                 <li><a href="graph_morris.html">Add Site</a></li>
