--- a/templates/netinfo/comp_css_sites.html
+++ b/templates/netinfo/comp_css_sites.html
@@ -1,4 +1,5 @@
         {% load static %}
+        <link rel="icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
         <!-- Datatables style -->
