--- a/templates/basic/comp_panel_left.html
+++ b/templates/basic/comp_panel_left.html
@@ -30,7 +30,7 @@
                             <a href="#"><i class="fa fa-building"></i> <span class="nav-label">Sites</span><span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level collapse">
                                 <li><a href="{% url 'sites' %}">All Sites</a></li>
-                                <li><a href="graph_morris.html">Add Site</a></li>
+                                <li><a href="{% url 'sites_add' %}">Add Site</a></li>
                             </ul>
                         </li>
                         <li>
