--- a/templates/netinfo/page_sites.html
+++ b/templates/netinfo/page_sites.html
@@ -67,7 +67,7 @@
                                                     <td>{{ site.add_field1 }}</td>
                                                     <td>{{ site.add_field2 }}</td>
                                                     <td class="text-center">
-                                                        <a href="{{ site.alias_name }}" class="btn btn-xs btn-default"><i class="fa fa-ellipsis-h"></i></a>
+                                                        <a href="name/{{ site.alias_name }}" class="btn btn-xs btn-default"><i class="fa fa-ellipsis-h"></i></a>
                                                         <a href="{{ site.alias_name }}/edit" class="btn btn-xs btn-default"><i class="fa fa-pencil"></i></a>
                                                         <a href="{{ site.alias_name }}/delete" class="btn btn-xs btn-danger"><i class="fa fa-times"></i></a>
                                                     </td>
