--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{ title }}</title>
+        <link rel="icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
         <!-- Basic -->
