--- a/templates/home/page_home.html
+++ b/templates/home/page_home.html
@@ -138,13 +138,8 @@
                                         </div>
                                     </div>
                                     <div class="m-t-md">
-                                        <small class="float-right">
-                                        <i class="fa fa-clock-o"> </i>
-                                        Update on 16.07.2015
-                                        </small>
-                                        <small>
-                                        <strong>Analysis of sales:</strong> The value has been changed over time, and last month reached a level over $50,000.
-                                        </small>
+                                        <small class="float-right"><i class="fa fa-clock-o"></i>Update on 16.07.2015</small>
+                                        <small><strong>Analysis of sales:</strong>The value has been changed over time, and last month reached a level over $50,000.</small>
                                     </div>
                                 </div>
                             </div>
